[gd_scene load_steps=69 format=3 uid="uid://bugviqid5w64h"]

[ext_resource type="Texture2D" uid="uid://r4cxyg1osvas" path="res://assets/NightBorne.png" id="1_dlmty"]
[ext_resource type="Script" uid="uid://54opjt3s5fgh" path="res://scripts/boss.gd" id="1_neq0i"]
[ext_resource type="AudioStream" uid="uid://cuupxc5smyqj7" path="res://assets/brackeys/brackeys_platformer_assets/sounds/explosion.wav" id="3_jncid"]
[ext_resource type="AudioStream" uid="uid://dyipp0wnp16af" path="res://assets/deadly-strike-352458.mp3" id="4_qnbj4"]
[ext_resource type="AudioStream" uid="uid://be61qi3byubs" path="res://assets/075681_electric-shock-33018.mp3" id="4_r3bxh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_neq0i"]
size = Vector2(33, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlmty"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_neq0i"]
atlas = ExtResource("1_dlmty")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfs1x"]
atlas = ExtResource("1_dlmty")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eiau"]
atlas = ExtResource("1_dlmty")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn2fc"]
atlas = ExtResource("1_dlmty")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqd3i"]
atlas = ExtResource("1_dlmty")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mautr"]
atlas = ExtResource("1_dlmty")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho3mf"]
atlas = ExtResource("1_dlmty")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7apjh"]
atlas = ExtResource("1_dlmty")
region = Rect2(640, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh5fr"]
atlas = ExtResource("1_dlmty")
region = Rect2(720, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dlq0"]
atlas = ExtResource("1_dlmty")
region = Rect2(800, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_25au8"]
atlas = ExtResource("1_dlmty")
region = Rect2(880, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk50o"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_325t2"]
atlas = ExtResource("1_dlmty")
region = Rect2(80, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bagrn"]
atlas = ExtResource("1_dlmty")
region = Rect2(160, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3gxo"]
atlas = ExtResource("1_dlmty")
region = Rect2(240, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dd2w"]
atlas = ExtResource("1_dlmty")
region = Rect2(320, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj5kv"]
atlas = ExtResource("1_dlmty")
region = Rect2(400, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1yhm"]
atlas = ExtResource("1_dlmty")
region = Rect2(480, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbxxu"]
atlas = ExtResource("1_dlmty")
region = Rect2(560, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyxkr"]
atlas = ExtResource("1_dlmty")
region = Rect2(640, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhysf"]
atlas = ExtResource("1_dlmty")
region = Rect2(720, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g25uh"]
atlas = ExtResource("1_dlmty")
region = Rect2(800, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4ffm"]
atlas = ExtResource("1_dlmty")
region = Rect2(880, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lngmi"]
atlas = ExtResource("1_dlmty")
region = Rect2(960, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q24ql"]
atlas = ExtResource("1_dlmty")
region = Rect2(1040, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2c66"]
atlas = ExtResource("1_dlmty")
region = Rect2(1120, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_giyuy"]
atlas = ExtResource("1_dlmty")
region = Rect2(1200, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqmr5"]
atlas = ExtResource("1_dlmty")
region = Rect2(1280, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1tdt"]
atlas = ExtResource("1_dlmty")
region = Rect2(1360, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm5ke"]
atlas = ExtResource("1_dlmty")
region = Rect2(1440, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymkos"]
atlas = ExtResource("1_dlmty")
region = Rect2(1520, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6qm0"]
atlas = ExtResource("1_dlmty")
region = Rect2(1600, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mrsh"]
atlas = ExtResource("1_dlmty")
region = Rect2(1680, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft6lg"]
atlas = ExtResource("1_dlmty")
region = Rect2(1760, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueo3c"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_863od"]
atlas = ExtResource("1_dlmty")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh7ji"]
atlas = ExtResource("1_dlmty")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3xpi"]
atlas = ExtResource("1_dlmty")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w2ut"]
atlas = ExtResource("1_dlmty")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbhct"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajbp4"]
atlas = ExtResource("1_dlmty")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_en4il"]
atlas = ExtResource("1_dlmty")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_efibt"]
atlas = ExtResource("1_dlmty")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tphtu"]
atlas = ExtResource("1_dlmty")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jncid"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnbj4"]
atlas = ExtResource("1_dlmty")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3bxh"]
atlas = ExtResource("1_dlmty")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqpjq"]
atlas = ExtResource("1_dlmty")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cdgk"]
atlas = ExtResource("1_dlmty")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsl3t"]
atlas = ExtResource("1_dlmty")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avx2"]
atlas = ExtResource("1_dlmty")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f346"]
atlas = ExtResource("1_dlmty")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0onds"]
atlas = ExtResource("1_dlmty")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_es0rk"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq7oa"]
atlas = ExtResource("1_dlmty")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gqtx"]
atlas = ExtResource("1_dlmty")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6jog"]
atlas = ExtResource("1_dlmty")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_02csv"]
atlas = ExtResource("1_dlmty")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_te2y6"]
atlas = ExtResource("1_dlmty")
region = Rect2(400, 80, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_lfs1x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlmty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neq0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfs1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eiau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn2fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqd3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mautr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho3mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7apjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh5fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dlq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25au8")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk50o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_325t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bagrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3gxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dd2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj5kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1yhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbxxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyxkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhysf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g25uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4ffm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lngmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q24ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2c66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giyuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqmr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1tdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm5ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymkos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6qm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mrsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft6lg")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueo3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_863od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh7ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3xpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w2ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbhct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajbp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en4il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efibt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tphtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueo3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_863od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh7ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3xpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w2ut")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jncid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnbj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3bxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqpjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cdgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsl3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f346")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0onds")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es0rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq7oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gqtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6jog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02csv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te2y6")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dlmty"]
size = Vector2(54, 21.5)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_neq0i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 10.5)
shape = SubResource("RectangleShape2D_neq0i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lfs1x")
animation = &"hurt"

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 18)
target_position = Vector2(-119, 0)
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 18)
target_position = Vector2(235, 0)
collision_mask = 2

[node name="Weapon" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_dlmty")

[node name="Timer" type="Timer" parent="Weapon"]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="Weapon"]
wait_time = 0.622
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.079
one_shot = true

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jncid")

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_r3bxh")

[node name="Strike" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qnbj4")

[connection signal="body_entered" from="Weapon" to="." method="_on_weapon_body_entered"]
[connection signal="body_exited" from="Weapon" to="." method="_on_weapon_body_exited"]
[connection signal="timeout" from="Weapon/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Weapon/Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
